cmake_minimum_required(VERSION 3.0)

# Solution
project(src)

# Projects
add_subdirectory(Hello_Worlds)
add_subdirectory(Applications)
add_subdirectory(Dialogs)
add_subdirectory(Windows)
add_subdirectory(Menus_And_Toolbars)
add_subdirectory(Containers)
add_subdirectory(Controls)
add_subdirectory(Components)
add_subdirectory(Events)
add_subdirectory(Tips_And_Tricks)
add_subdirectory(User_Controls)
add_subdirectory(User_Components)
add_subdirectory(User_Dialogs)
add_subdirectory(Others)
add_subdirectory(Tests)
