cmake_minimum_required(VERSION 3.0)
project(Common_Controls)

add_subdirectory(Box)
add_subdirectory(Box_Picture)
add_subdirectory(Box_Picture2)
add_subdirectory(Browser)
add_subdirectory(Button)
add_subdirectory(Check_Browser)
add_subdirectory(Check_Button)
add_subdirectory(Clock)
add_subdirectory(Clock_Output)
add_subdirectory(Color_Chooser)
add_subdirectory(File_Browser)
add_subdirectory(File_Input)
add_subdirectory(Float_Input)
add_subdirectory(Input)
add_subdirectory(Int_Input)
add_subdirectory(Nice_Slider)
add_subdirectory(Output)
add_subdirectory(Progress)
add_subdirectory(Radio_Round_Button)
add_subdirectory(Spinner)
add_subdirectory(Toggle_Button)
