cmake_minimum_required(VERSION 3.0)
project(Common_Dialogs)

add_subdirectory(beep)
add_subdirectory(Choice)
add_subdirectory(Color_Chooser)
add_subdirectory(File_Chooser)
add_subdirectory(Message)
add_subdirectory(Native_File_Chooser_Browse_Directory)
add_subdirectory(Native_File_Chooser_Browse_File)
add_subdirectory(Native_File_Chooser_Save_File)
