cmake_minimum_required(VERSION 3.0)

# Solution
project(Common_Dialogs)

# Projects
add_subdirectory(About)
add_subdirectory(Alert)
add_subdirectory(Beep)
add_subdirectory(Choice)
add_subdirectory(Color_Chooser_Dialog)
add_subdirectory(File_Chooser_Browse_Directory)
add_subdirectory(File_Chooser_Browse_File)
add_subdirectory(Input_Dialog)
add_subdirectory(Message)
add_subdirectory(Native_File_Chooser_Browse_Directory)
add_subdirectory(Native_File_Chooser_Browse_File)
add_subdirectory(Native_File_Chooser_Save_File)
add_subdirectory(Password)
