cmake_minimum_required(VERSION 3.0)

# Solution
project(Others)

# Projects
add_subdirectory(Colored_Browser)
add_subdirectory(Colored_Tabs)
add_subdirectory(Colored_Text_Display)
add_subdirectory(Colored_Windows)
add_subdirectory(Group_And_Check_Button)
add_subdirectory(Group_And_Radio_Round_Button)
